intentando subir blog

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ inc:
   
   # Setup your fonts, colors etc at _assets/stylesheets/main.scss
 
-url:         http://fernandoguirao.github.io/blog-joinity/
+url:         http://fernandoguirao.github.io/blog-joinity
 source:      .
 destination: ./_site
 plugins:     ./_plugins
