--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ timezone:    nil
 future:      false
 show_drafts: nil
 limit_posts: 0
-pygments:    true
+pygments:    false
 
 relative_permalinks: true
 
