--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ inc:
   # Comments
   disqus:
     # Eg. "exampleblog" Set to false to disable comments
-    shortname:  false
+    shortname:  joinitytheblog
   
   # Sharing settings
   sharing:
@@ -43,7 +43,7 @@ inc:
   
   # Setup your fonts, colors etc at _assets/stylesheets/main.scss
 
-url:         http://fernandoguirao.github.io/blog-joinity
+url:         http://fernandoguirao.github.io/blog-joinity/
 source:      .
 destination: ./_site
 plugins:     ./_plugins
