--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ inc:
   
   # Setup your fonts, colors etc at _assets/stylesheets/main.scss
 
-url:         http://fernandoguirao.github.io/blog-joinity/
+url:         http://fernandoguirao.github.io
 source:      .
 destination: ./_site
 plugins:     ./_plugins
@@ -73,7 +73,7 @@ excerpt_separator: "<!-- more -->"
 safe:        false
 host:        0.0.0.0
 port:        4000
-baseurl:     /
+baseurl:     /blog-joinity
 lsi:         false
 
 maruku:
