--- a/_config.yml
+++ b/_config.yml
@@ -125,3 +125,13 @@ assets:
   cache: false
   gzip: [ text/css, application/javascript ]
   debug: false
+ 
+sass:
+    style:  expanded  # nested|expanded|compact|compressed
+    deploy_style: compressed  # nested|expanded|compact|compressed
+    # "deploy_style:" is used only for building the site
+    # (ie: not using the --watch flag)
+
+    compile_in_place: true   # true|false
+    # If true, compiles sass directly into your jekyll source directory
+    # As well as your destination directory
